fixing top-bar overflow color by adding background to view-container

--- a/client/assets/scss/_style.scss
+++ b/client/assets/scss/_style.scss
@@ -102,6 +102,11 @@ body {
   }
 }
 
+// Views Container
+.view-container {
+  background: $body-background;
+}
+
 // Secondary Menu (Overview, Events, Landmarks, Devices, Alerts)
 
 .secondary-menu {
@@ -119,7 +124,7 @@ body {
     content:'';
     position: absolute;
     top: 40px;
-    z-index: -1;
+    z-index: 1;
   }
 
   .menu-bar {
@@ -130,6 +135,7 @@ body {
     padding: 14px 0 12px 0;
     margin: 0 20px 0 20px;
     border-bottom: 1px solid transparent;
+    z-index: 2;
 
     &:hover {
       background: none;
